tests/positive/LocalSynonym.juvix
module LocalSynonym;

type Unit := unit : Unit;

open Unit using {unit} public;

myUnit : Type := Unit;

module L;
  haha : myUnit := unit;
end;
