tests/negative/issue1344/Other.juvix
module Other;

  inductive Unit {
  t : Unit;
  };

end;
